# succinct-binary

./: .ghci  .gitmodules  README.md  cabal.project  succinct-binary.cabal
src/Data/Binary/: Succinct.hs
src/Data/Binary/Succinct/: Blob.hs  Generics.hs  Get.hs  Internal.hs  Orphans.hs  Put.hs  Result.hs  Size.hs
