name:          succinct-binary
category:      Data
version:       0
license:       BSD2
cabal-version: >= 1.8
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/succinct-binary/
bug-reports:   http://github.com/ekmett/succinct-binary/issues
copyright:     Copyright (C) 2018 Edward A. Kmett
synopsis:      Lazy binary (de)serialization
description:   Lazy binary (de)serialization.
build-type:    Simple
extra-source-files:
  .gitignore
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: git://github.com/ekmett/succinct-binary.git

library
  build-depends:
    base >= 4   && < 5,
    bits,
    bytes,
    bytestring,
    cereal >= 0.5.7,
    contravariant,
    generics-sop,
    hw-rankselect >= 0.12.0.4,
    hw-rankselect-base,
    hw-balancedparens,
    spool,
    vector

  hs-source-dirs:  src
  exposed-modules:
    Data.Binary.Succinct.Blob
    Data.Binary.Succinct.Get
    Data.Binary.Succinct.Orphans
    Data.Binary.Succinct.Put

  ghc-options: -Wall
